parser/output/SCSSParser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stylesheet
Rule 1     _before-flag -> <empty>
Rule 2     _before-mediaquery -> <empty>
Rule 3     _before-selectors -> <empty>
Rule 4     ruleset -> selectors _before-selectors LBRACE space-opt declarations _after-selectors RBRACE space-opt
Rule 5     empty -> <empty>
Rule 6     charset-opt -> space-opt charset
Rule 7     charset-opt -> space-opt
Rule 8     imports-opt -> imports
Rule 9     imports-opt -> empty
Rule 10    media -> _before-mediaquery SYM_MEDIA space-opt media-queries _after-mediaquery LBRACE space-opt styles-opt RBRACE space-opt
Rule 11    page -> SYM_PAGE space-opt pseudo-page-opt _before-selectors LBRACE space-opt declarations _after-selectors RBRACE space-opt
Rule 12    value -> value-term value-op-opt value
Rule 13    space-opt -> space
Rule 14    space-opt -> empty
Rule 15    declarations -> native-declarations
Rule 16    stylesheet -> charset-opt imports-opt styles-opt
Rule 17    _after-flag -> <empty>
Rule 18    _after-mediaquery -> <empty>
Rule 19    styles-opt -> styles
Rule 20    styles-opt -> empty
Rule 21    _after-selectors -> <empty>
Rule 22    property -> ms-property-hack IDENTIFIER space-opt
Rule 23    selectors -> selector COMMA space-opt selectors
Rule 24    value -> value-term
Rule 25    declarations -> property COLON space-opt LBRACE space-opt declarations RBRACE space-opt declarations
Rule 26    charset -> SYM_CHARSET STRING space-opt SEMICOLON space-opt
Rule 27    media-queries-opt -> media-queries
Rule 28    media-queries-opt -> empty
Rule 29    pseudo-page-opt -> pseudo-page
Rule 30    pseudo-page-opt -> empty
Rule 31    imports -> import imports
Rule 32    space -> space-delimiter space
Rule 33    selectors -> selector
Rule 34    styles -> style styles
Rule 35    ms-property-hack -> OP_MUL
Rule 36    imports -> import
Rule 37    value-op-opt -> value-op
Rule 38    value-op-opt -> empty
Rule 39    space -> space-delimiter
Rule 40    declarations -> selector-filters combinator simple-selector space-opt LBRACE space-opt declarations RBRACE space-opt declarations
Rule 41    styles -> style
Rule 42    pseudo-page -> COLON IDENTIFIER space-opt
Rule 43    media-queries -> media-query COMMA space-opt media-queries
Rule 44    selector -> simple-selector combinator selector
Rule 45    value-term -> ms-value-hack
Rule 46    import -> SYM_IMPORT space-opt _before-mediaquery import-src media-queries-opt _after-mediaquery SEMICOLON space-opt
Rule 47    media-queries -> media-query
Rule 48    selector -> simple-selector space-opt
Rule 49    value-op -> OP_DIV space-opt
Rule 50    value-op -> COMMA space-opt
Rule 51    space-delimiter -> whitespace
Rule 52    space-delimiter -> blockcomment
Rule 53    space-delimiter -> htmlcomment
Rule 54    native-declarations -> declaration-opt SEMICOLON space-opt declarations
Rule 55    style -> page
Rule 56    style -> media
Rule 57    style -> ruleset
Rule 58    ms-value-hack -> ms-scoped-function ms-arguments-opt RPAREN space-opt
Rule 59    native-declarations -> declaration-opt
Rule 60    import-src -> STRING space-opt
Rule 61    import-src -> URI space-opt
Rule 62    media-query -> media-limited-opt media-typed
Rule 63    simple-selector -> element-selector selector-filters-opt
Rule 64    value-term -> value-unary-op-opt value-numeric
Rule 65    whitespace -> SPACE
Rule 66    media-query -> media-expressions
Rule 67    ms-scoped-function -> IDENTIFIER COLON ms-scoped-function
Rule 68    ms-scoped-function -> IDENTIFIER DOT ms-scoped-function
Rule 69    simple-selector -> selector-filters
Rule 70    declaration-opt -> declaration
Rule 71    declaration-opt -> empty
Rule 72    value-term -> value-nonnumeric
Rule 73    blockcomment -> BLOCKCOMMENT
Rule 74    ms-scoped-function -> IDENTIFIER DOT FUNCTION space-opt
Rule 75    media-limited-opt -> media-limited
Rule 76    media-limited-opt -> empty
Rule 77    declaration -> property COLON space-opt value flag-opt
Rule 78    element-selector -> IDENTIFIER
Rule 79    element-selector -> OP_MUL
Rule 80    element-selector -> PREFIXED_IDENTIFIER
Rule 81    element-selector -> PREFIXED_ALL
Rule 82    value-unary-op-opt -> value-unary-op
Rule 83    value-unary-op-opt -> empty
Rule 84    htmlcomment -> CDO
Rule 85    htmlcomment -> CDC
Rule 86    ms-arguments-opt -> ms-arguments
Rule 87    ms-arguments-opt -> empty
Rule 88    property -> IDENTIFIER space-opt
Rule 89    media-limited -> KEY_ONLY space-opt
Rule 90    media-limited -> KEY_NOT space-opt
Rule 91    value-unary-op -> OP_MINUS space-opt
Rule 92    value-unary-op -> OP_PLUS space-opt
Rule 93    selector-filters-opt -> selector-filters
Rule 94    selector-filters-opt -> empty
Rule 95    ms-arguments -> ms-argument COMMA space-opt ms-arguments
Rule 96    flag-opt -> flag
Rule 97    flag-opt -> empty
Rule 98    media-typed -> media-type KEY_AND space-opt media-expressions
Rule 99    ms-arguments -> ms-argument
Rule 100   selector-filters -> selector-filter selector-filters
Rule 101   value-numeric -> value-number
Rule 102   value-numeric -> value-percentage
Rule 103   value-numeric -> value-dimension
Rule 104   media-typed -> media-type
Rule 105   flag -> _before-flag BANG space-opt flag-type _after-flag
Rule 106   selector-filters -> selector-filter
Rule 107   ms-argument -> IDENTIFIER space-opt OP_EQUALS space-opt ms-value-term
Rule 108   media-type -> IDENTIFIER space-opt
Rule 109   flag-type -> KEY_IMPORTANT space-opt
Rule 110   value-nonnumeric -> value-string
Rule 111   value-nonnumeric -> value-uri
Rule 112   value-nonnumeric -> value-identifier
Rule 113   value-nonnumeric -> value-hexcolor
Rule 114   value-nonnumeric -> value-function
Rule 115   ms-value-term -> value-unary-op-opt ms-value-numeric
Rule 116   selector-filter -> hash
Rule 117   selector-filter -> class
Rule 118   selector-filter -> attribute
Rule 119   selector-filter -> pseudo
Rule 120   selector-filter -> negation
Rule 121   media-expressions -> media-expression KEY_AND space-opt media-expressions
Rule 122   ms-value-term -> ms-value-nonnumeric
Rule 123   media-expressions -> media-expression
Rule 124   value-number -> NUMBER space-opt
Rule 125   ms-value-numeric -> value-number
Rule 126   combinator -> space-opt combinator-op
Rule 127   media-expression -> LPAREN space-opt media-feature media-value-opt RPAREN space-opt
Rule 128   value-percentage -> PERCENTAGE space-opt
Rule 129   combinator -> space
Rule 130   ms-value-nonnumeric -> value-string
Rule 131   media-feature -> IDENTIFIER space-opt
Rule 132   value-dimension -> DIMENSION space-opt
Rule 133   combinator-op -> OP_PLUS space-opt
Rule 134   combinator-op -> OP_GT space-opt
Rule 135   combinator-op -> OP_TILDE space-opt
Rule 136   media-value-opt -> media-value
Rule 137   media-value-opt -> empty
Rule 138   value-string -> STRING space-opt
Rule 139   hash -> HASH
Rule 140   media-value -> COLON space-opt value
Rule 141   value-uri -> URI space-opt
Rule 142   class -> DOT IDENTIFIER
Rule 143   value-identifier -> IDENTIFIER space-opt
Rule 144   attribute -> LBRACKET space-opt attribute-name attribute-match-opt RBRACKET
Rule 145   attribute-name -> ELEMENT space-opt
Rule 146   attribute-name -> IDENTIFIER space-opt
Rule 147   attribute-name -> PREFIXED_IDENTIFIER space-opt
Rule 148   value-hexcolor -> HASH space-opt
Rule 149   value-function -> FUNCTION space-opt value RPAREN space-opt
Rule 150   attribute-match-opt -> attribute-match
Rule 151   attribute-match-opt -> empty
Rule 152   attribute-match -> attribute-op attribute-value
Rule 153   attribute-op -> OP_PREFIXMATCH space-opt
Rule 154   attribute-op -> OP_SUFFIXMATCH space-opt
Rule 155   attribute-op -> OP_SUBSTRINGMATCH space-opt
Rule 156   attribute-op -> OP_INCLUDES space-opt
Rule 157   attribute-op -> OP_DASHMATCH space-opt
Rule 158   attribute-op -> OP_EQUALS space-opt
Rule 159   attribute-value -> IDENTIFIER space-opt
Rule 160   attribute-value -> STRING space-opt
Rule 161   pseudo -> COLON pseudo-selector
Rule 162   pseudo -> COLON COLON pseudo-selector
Rule 163   pseudo-selector -> IDENTIFIER
Rule 164   pseudo-selector -> pseudo-function
Rule 165   pseudo-function -> FUNCTION space-opt pseudo-expression RPAREN
Rule 166   pseudo-expression -> pseudo-term pseudo-expression
Rule 167   pseudo-expression -> pseudo-term
Rule 168   pseudo-term -> OP_PLUS space-opt
Rule 169   pseudo-term -> OP_MINUS space-opt
Rule 170   pseudo-term -> DIMENSION space-opt
Rule 171   pseudo-term -> NUMBER space-opt
Rule 172   pseudo-term -> STRING space-opt
Rule 173   pseudo-term -> IDENTIFIER space-opt
Rule 174   negation -> NOT_SELECTOR space-opt negation-argument RPAREN
Rule 175   negation-argument -> element-selector space-opt
Rule 176   negation-argument -> hash space-opt
Rule 177   negation-argument -> class space-opt
Rule 178   negation-argument -> attribute space-opt
Rule 179   negation-argument -> pseudo space-opt

Terminals, with rules where they appear

BANG                 : 105
BLOCKCOMMENT         : 73
CDC                  : 85
CDO                  : 84
COLON                : 25 42 67 77 140 161 162 162
COMMA                : 23 43 50 95
DIMENSION            : 132 170
DOT                  : 68 74 142
ELEMENT              : 145
FUNCTION             : 74 149 165
HASH                 : 139 148
IDENTIFIER           : 22 42 67 68 74 78 88 107 108 131 142 143 146 159 163 173
KEY_AND              : 98 121
KEY_IMPORTANT        : 109
KEY_NOT              : 90
KEY_ONLY             : 89
LBRACE               : 4 10 11 25 40
LBRACKET             : 144
LPAREN               : 127
NOT_SELECTOR         : 174
NUMBER               : 124 171
OP_DASHMATCH         : 157
OP_DIV               : 49
OP_EQUALS            : 107 158
OP_GT                : 134
OP_INCLUDES          : 156
OP_MINUS             : 91 169
OP_MUL               : 35 79
OP_PLUS              : 92 133 168
OP_PREFIXMATCH       : 153
OP_SUBSTRINGMATCH    : 155
OP_SUFFIXMATCH       : 154
OP_TILDE             : 135
PERCENTAGE           : 128
PREFIXED_ALL         : 81
PREFIXED_IDENTIFIER  : 80 147
RBRACE               : 4 10 11 25 40
RBRACKET             : 144
RPAREN               : 58 127 149 165 174
SEMICOLON            : 26 46 54
SPACE                : 65
STRING               : 26 60 138 160 172
SYM_CHARSET          : 26
SYM_IMPORT           : 46
SYM_MEDIA            : 10
SYM_PAGE             : 11
URI                  : 61 141
error                : 

Nonterminals, with rules where they appear

_after-flag          : 105
_after-mediaquery    : 10 46
_after-selectors     : 4 11
_before-flag         : 105
_before-mediaquery   : 10 46
_before-selectors    : 4 11
attribute            : 118 178
attribute-match      : 150
attribute-match-opt  : 144
attribute-name       : 144
attribute-op         : 152
attribute-value      : 152
blockcomment         : 52
charset              : 6
charset-opt          : 16
class                : 117 177
combinator           : 40 44
combinator-op        : 126
declaration          : 70
declaration-opt      : 54 59
declarations         : 4 11 25 25 40 40 54
element-selector     : 63 175
empty                : 9 14 20 28 30 38 71 76 83 87 94 97 137 151
flag                 : 96
flag-opt             : 77
flag-type            : 105
hash                 : 116 176
htmlcomment          : 53
import               : 31 36
import-src           : 46
imports              : 8 31
imports-opt          : 16
media                : 56
media-expression     : 121 123
media-expressions    : 66 98 121
media-feature        : 127
media-limited        : 75
media-limited-opt    : 62
media-queries        : 10 27 43
media-queries-opt    : 46
media-query          : 43 47
media-type           : 98 104
media-typed          : 62
media-value          : 136
media-value-opt      : 127
ms-argument          : 95 99
ms-arguments         : 86 95
ms-arguments-opt     : 58
ms-property-hack     : 22
ms-scoped-function   : 58 67 68
ms-value-hack        : 45
ms-value-nonnumeric  : 122
ms-value-numeric     : 115
ms-value-term        : 107
native-declarations  : 15
negation             : 120
negation-argument    : 174
page                 : 55
property             : 25 77
pseudo               : 119 179
pseudo-expression    : 165 166
pseudo-function      : 164
pseudo-page          : 29
pseudo-page-opt      : 11
pseudo-selector      : 161 162
pseudo-term          : 166 167
ruleset              : 57
selector             : 23 33 44
selector-filter      : 100 106
selector-filters     : 40 69 93 100
selector-filters-opt : 63
selectors            : 4 23
simple-selector      : 40 44 48
space                : 13 32 129
space-delimiter      : 32 39
space-opt            : 4 4 6 7 10 10 10 11 11 11 22 23 25 25 25 26 26 40 40 40 42 43 46 46 48 49 50 54 58 60 61 74 77 88 89 90 91 92 95 98 105 107 107 108 109 121 124 126 127 127 128 131 132 133 134 135 138 140 141 143 144 145 146 147 148 149 149 153 154 155 156 157 158 159 160 165 168 169 170 171 172 173 174 175 176 177 178 179
style                : 34 41
styles               : 19 34
styles-opt           : 10 16
stylesheet           : 0
value                : 12 77 140 149
value-dimension      : 103
value-function       : 114
value-hexcolor       : 113
value-identifier     : 112
value-nonnumeric     : 72
value-number         : 101 125
value-numeric        : 64
value-op             : 37
value-op-opt         : 12
value-percentage     : 102
value-string         : 110 130
value-term           : 12 24
value-unary-op       : 82
value-unary-op-opt   : 64 115
value-uri            : 111
whitespace           : 51

Parsing method: LALR

state 0

    (0) S' -> . stylesheet
    (16) stylesheet -> . charset-opt imports-opt styles-opt
    (6) charset-opt -> . space-opt charset
    (7) charset-opt -> . space-opt
    (13) space-opt -> . space
    (14) space-opt -> . empty
    (32) space -> . space-delimiter space
    (39) space -> . space-delimiter
    (5) empty -> .
    (51) space-delimiter -> . whitespace
    (52) space-delimiter -> . blockcomment
    (53) space-delimiter -> . htmlcomment
    (65) whitespace -> . SPACE
    (73) blockcomment -> . BLOCKCOMMENT
    (84) htmlcomment -> . CDO
    (85) htmlcomment -> . CDC

    SYM_CHARSET     reduce using rule 5 (empty -> .)
    SYM_IMPORT      reduce using rule 5 (empty -> .)
    SYM_PAGE        reduce using rule 5 (empty -> .)
    IDENTIFIER      reduce using rule 5 (empty -> .)
    OP_MUL          reduce using rule 5 (empty -> .)
    PREFIXED_IDENTIFIER reduce using rule 5 (empty -> .)
    PREFIXED_ALL    reduce using rule 5 (empty -> .)
    HASH            reduce using rule 5 (empty -> .)
    DOT             reduce using rule 5 (empty -> .)
    LBRACKET        reduce using rule 5 (empty -> .)
    COLON           reduce using rule 5 (empty -> .)
    NOT_SELECTOR    reduce using rule 5 (empty -> .)
    SYM_MEDIA       reduce using rule 5 (empty -> .)
    $end            reduce using rule 5 (empty -> .)
    SPACE           shift and go to state 9
    BLOCKCOMMENT    shift and go to state 11
    CDO             shift and go to state 2
    CDC             shift and go to state 5

    htmlcomment                    shift and go to state 1
    space                          shift and go to state 3
    blockcomment                   shift and go to state 4
    stylesheet                     shift and go to state 6
    space-opt                      shift and go to state 7
    space-delimiter                shift and go to state 8
    charset-opt                    shift and go to state 10
    empty                          shift and go to state 12
    whitespace                     shift and go to state 13

state 1

    (53) space-delimiter -> htmlcomment .

    SPACE           reduce using rule 53 (space-delimiter -> htmlcomment .)
    BLOCKCOMMENT    reduce using rule 53 (space-delimiter -> htmlcomment .)
    CDO             reduce using rule 53 (space-delimiter -> htmlcomment .)
    CDC             reduce using rule 53 (space-delimiter -> htmlcomment .)
    SYM_PAGE        reduce using rule 53 (space-delimiter -> htmlcomment .)
    IDENTIFIER      reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_MUL          reduce using rule 53 (space-delimiter -> htmlcomment .)
    PREFIXED_IDENTIFIER reduce using rule 53 (space-delimiter -> htmlcomment .)
    PREFIXED_ALL    reduce using rule 53 (space-delimiter -> htmlcomment .)
    HASH            reduce using rule 53 (space-delimiter -> htmlcomment .)
    DOT             reduce using rule 53 (space-delimiter -> htmlcomment .)
    LBRACKET        reduce using rule 53 (space-delimiter -> htmlcomment .)
    COLON           reduce using rule 53 (space-delimiter -> htmlcomment .)
    NOT_SELECTOR    reduce using rule 53 (space-delimiter -> htmlcomment .)
    SYM_MEDIA       reduce using rule 53 (space-delimiter -> htmlcomment .)
    $end            reduce using rule 53 (space-delimiter -> htmlcomment .)
    RBRACE          reduce using rule 53 (space-delimiter -> htmlcomment .)
    SEMICOLON       reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_MINUS        reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_PLUS         reduce using rule 53 (space-delimiter -> htmlcomment .)
    STRING          reduce using rule 53 (space-delimiter -> htmlcomment .)
    URI             reduce using rule 53 (space-delimiter -> htmlcomment .)
    FUNCTION        reduce using rule 53 (space-delimiter -> htmlcomment .)
    NUMBER          reduce using rule 53 (space-delimiter -> htmlcomment .)
    PERCENTAGE      reduce using rule 53 (space-delimiter -> htmlcomment .)
    DIMENSION       reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_DIV          reduce using rule 53 (space-delimiter -> htmlcomment .)
    COMMA           reduce using rule 53 (space-delimiter -> htmlcomment .)
    BANG            reduce using rule 53 (space-delimiter -> htmlcomment .)
    RPAREN          reduce using rule 53 (space-delimiter -> htmlcomment .)
    KEY_IMPORTANT   reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_PREFIXMATCH  reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_SUFFIXMATCH  reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_SUBSTRINGMATCH reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_INCLUDES     reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_DASHMATCH    reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_EQUALS       reduce using rule 53 (space-delimiter -> htmlcomment .)
    RBRACKET        reduce using rule 53 (space-delimiter -> htmlcomment .)
    LPAREN          reduce using rule 53 (space-delimiter -> htmlcomment .)
    KEY_AND         reduce using rule 53 (space-delimiter -> htmlcomment .)
    LBRACE          reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_GT           reduce using rule 53 (space-delimiter -> htmlcomment .)
    OP_TILDE        reduce using rule 53 (space-delimiter -> htmlcomment .)
    SYM_CHARSET     reduce using rule 53 (space-delimiter -> htmlcomment .)
    SYM_IMPORT      reduce using rule 53 (space-delimiter -> htmlcomment .)
    ELEMENT         reduce using rule 53 (space-delimiter -> htmlcomment .)
    KEY_ONLY        reduce using rule 53 (space-delimiter -> htmlcomment .)
    KEY_NOT         reduce using rule 53 (space-delimiter -> htmlcomment .)


state 2

    (84) htmlcomment -> CDO .

    SPACE           reduce using rule 84 (htmlcomment -> CDO .)
    BLOCKCOMMENT    reduce using rule 84 (htmlcomment -> CDO .)
    CDO             reduce using rule 84 (htmlcomment -> CDO .)
    CDC             reduce using rule 84 (htmlcomment -> CDO .)
    IDENTIFIER      reduce using rule 84 (htmlcomment -> CDO .)
    OP_MUL          reduce using rule 84 (htmlcomment -> CDO .)
    HASH            reduce using rule 84 (htmlcomment -> CDO .)
    DOT             reduce using rule 84 (htmlcomment -> CDO .)
    LBRACKET        reduce using rule 84 (htmlcomment -> CDO .)
    COLON           reduce using rule 84 (htmlcomment -> CDO .)
    NOT_SELECTOR    reduce using rule 84 (htmlcomment -> CDO .)
    SEMICOLON       reduce using rule 84 (htmlcomment -> CDO .)
    RBRACE          reduce using rule 84 (htmlcomment -> CDO .)
    OP_PLUS         reduce using rule 84 (htmlcomment -> CDO .)
    OP_MINUS        reduce using rule 84 (htmlcomment -> CDO .)
    DIMENSION       reduce using rule 84 (htmlcomment -> CDO .)
    NUMBER          reduce using rule 84 (htmlcomment -> CDO .)
    STRING          reduce using rule 84 (htmlcomment -> CDO .)
    RPAREN          reduce using rule 84 (htmlcomment -> CDO .)
    SYM_CHARSET     reduce using rule 84 (htmlcomment -> CDO .)
    SYM_IMPORT      reduce using rule 84 (htmlcomment -> CDO .)
    SYM_PAGE        reduce using rule 84 (htmlcomment -> CDO .)
    PREFIXED_IDENTIFIER reduce using rule 84 (htmlcomment -> CDO .)
    PREFIXED_ALL    reduce using rule 84 (htmlcomment -> CDO .)
    SYM_MEDIA       reduce using rule 84 (htmlcomment -> CDO .)
    $end            reduce using rule 84 (htmlcomment -> CDO .)
    KEY_ONLY        reduce using rule 84 (htmlcomment -> CDO .)
    KEY_NOT         reduce using rule 84 (htmlcomment -> CDO .)
    LPAREN          reduce using rule 84 (htmlcomment -> CDO .)
    LBRACE          reduce using rule 84 (htmlcomment -> CDO .)
    OP_DIV          reduce using rule 84 (htmlcomment -> CDO .)
    COMMA           reduce using rule 84 (htmlcomment -> CDO .)
    URI             reduce using rule 84 (htmlcomment -> CDO .)
    FUNCTION        reduce using rule 84 (htmlcomment -> CDO .)
    PERCENTAGE      reduce using rule 84 (htmlcomment -> CDO .)
    BANG            reduce using rule 84 (htmlcomment -> CDO .)
    RBRACKET        reduce using rule 84 (htmlcomment -> CDO .)
    OP_GT           reduce using rule 84 (htmlcomment -> CDO .)
    OP_TILDE        reduce using rule 84 (htmlcomment -> CDO .)
    OP_PREFIXMATCH  reduce using rule 84 (htmlcomment -> CDO .)
    OP_SUFFIXMATCH  reduce using rule 84 (htmlcomment -> CDO .)
    OP_SUBSTRINGMATCH reduce using rule 84 (htmlcomment -> CDO .)
    OP_INCLUDES     reduce using rule 84 (htmlcomment -> CDO .)
    OP_DASHMATCH    reduce using rule 84 (htmlcomment -> CDO .)
    OP_EQUALS       reduce using rule 84 (htmlcomment -> CDO .)
    ELEMENT         reduce using rule 84 (htmlcomment -> CDO .)
    KEY_AND         reduce using rule 84 (htmlcomment -> CDO .)
    KEY_IMPORTANT   reduce using rule 84 (htmlcomment -> CDO .)


state 3

    (13) space-opt -> space .

    IDENTIFIER      reduce using rule 13 (space-opt -> space .)
    STRING          reduce using rule 13 (space-opt -> space .)
    OP_PLUS         reduce using rule 13 (space-opt -> space .)
    OP_MINUS        reduce using rule 13 (space-opt -> space .)
    DIMENSION       reduce using rule 13 (space-opt -> space .)
    NUMBER          reduce using rule 13 (space-opt -> space .)
    RPAREN          reduce using rule 13 (space-opt -> space .)
    LPAREN          reduce using rule 13 (space-opt -> space .)
    OP_DIV          reduce using rule 13 (space-opt -> space .)
    COMMA           reduce using rule 13 (space-opt -> space .)
    URI             reduce using rule 13 (space-opt -> space .)
    HASH            reduce using rule 13 (space-opt -> space .)
    FUNCTION        reduce using rule 13 (space-opt -> space .)
    PERCENTAGE      reduce using rule 13 (space-opt -> space .)
    BANG            reduce using rule 13 (space-opt -> space .)
    SEMICOLON       reduce using rule 13 (space-opt -> space .)
    RBRACE          reduce using rule 13 (space-opt -> space .)
    OP_MUL          reduce using rule 13 (space-opt -> space .)
    DOT             reduce using rule 13 (space-opt -> space .)
    LBRACKET        reduce using rule 13 (space-opt -> space .)
    COLON           reduce using rule 13 (space-opt -> space .)
    NOT_SELECTOR    reduce using rule 13 (space-opt -> space .)
    PREFIXED_IDENTIFIER reduce using rule 13 (space-opt -> space .)
    PREFIXED_ALL    reduce using rule 13 (space-opt -> space .)
    SYM_IMPORT      reduce using rule 13 (space-opt -> space .)
    SYM_PAGE        reduce using rule 13 (space-opt -> space .)
    SYM_MEDIA       reduce using rule 13 (space-opt -> space .)
    $end            reduce using rule 13 (space-opt -> space .)
    SYM_CHARSET     reduce using rule 13 (space-opt -> space .)
    KEY_AND         reduce using rule 13 (space-opt -> space .)
    LBRACE          reduce using rule 13 (space-opt -> space .)
    OP_EQUALS       reduce using rule 13 (space-opt -> space .)
    ELEMENT         reduce using rule 13 (space-opt -> space .)
    OP_PREFIXMATCH  reduce using rule 13 (space-opt -> space .)
    OP_SUFFIXMATCH  reduce using rule 13 (space-opt -> space .)
    OP_SUBSTRINGMATCH reduce using rule 13 (space-opt -> space .)
    OP_INCLUDES     reduce using rule 13 (space-opt -> space .)
    OP_DASHMATCH    reduce using rule 13 (space-opt -> space .)
    RBRACKET        reduce using rule 13 (space-opt -> space .)
    KEY_ONLY        reduce using rule 13 (space-opt -> space .)
    KEY_NOT         reduce using rule 13 (space-opt -> space .)
    KEY_IMPORTANT   reduce using rule 13 (space-opt -> space .)


state 4

    (52) space-delimiter -> blockcomment .

    SPACE           reduce using rule 52 (space-delimiter -> blockcomment .)
    BLOCKCOMMENT    reduce using rule 52 (space-delimiter -> blockcomment .)
    CDO             reduce using rule 52 (space-delimiter -> blockcomment .)
    CDC             reduce using rule 52 (space-delimiter -> blockcomment .)
    SYM_PAGE        reduce using rule 52 (space-delimiter -> blockcomment .)
    IDENTIFIER      reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_MUL          reduce using rule 52 (space-delimiter -> blockcomment .)
    PREFIXED_IDENTIFIER reduce using rule 52 (space-delimiter -> blockcomment .)
    PREFIXED_ALL    reduce using rule 52 (space-delimiter -> blockcomment .)
    HASH            reduce using rule 52 (space-delimiter -> blockcomment .)
    DOT             reduce using rule 52 (space-delimiter -> blockcomment .)
    LBRACKET        reduce using rule 52 (space-delimiter -> blockcomment .)
    COLON           reduce using rule 52 (space-delimiter -> blockcomment .)
    NOT_SELECTOR    reduce using rule 52 (space-delimiter -> blockcomment .)
    SYM_MEDIA       reduce using rule 52 (space-delimiter -> blockcomment .)
    $end            reduce using rule 52 (space-delimiter -> blockcomment .)
    RBRACE          reduce using rule 52 (space-delimiter -> blockcomment .)
    SEMICOLON       reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_MINUS        reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_PLUS         reduce using rule 52 (space-delimiter -> blockcomment .)
    STRING          reduce using rule 52 (space-delimiter -> blockcomment .)
    URI             reduce using rule 52 (space-delimiter -> blockcomment .)
    FUNCTION        reduce using rule 52 (space-delimiter -> blockcomment .)
    NUMBER          reduce using rule 52 (space-delimiter -> blockcomment .)
    PERCENTAGE      reduce using rule 52 (space-delimiter -> blockcomment .)
    DIMENSION       reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_DIV          reduce using rule 52 (space-delimiter -> blockcomment .)
    COMMA           reduce using rule 52 (space-delimiter -> blockcomment .)
    BANG            reduce using rule 52 (space-delimiter -> blockcomment .)
    RPAREN          reduce using rule 52 (space-delimiter -> blockcomment .)
    KEY_IMPORTANT   reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_PREFIXMATCH  reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_SUFFIXMATCH  reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_SUBSTRINGMATCH reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_INCLUDES     reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_DASHMATCH    reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_EQUALS       reduce using rule 52 (space-delimiter -> blockcomment .)
    RBRACKET        reduce using rule 52 (space-delimiter -> blockcomment .)
    LPAREN          reduce using rule 52 (space-delimiter -> blockcomment .)
    KEY_AND         reduce using rule 52 (space-delimiter -> blockcomment .)
    LBRACE          reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_GT           reduce using rule 52 (space-delimiter -> blockcomment .)
    OP_TILDE        reduce using rule 52 (space-delimiter -> blockcomment .)
    SYM_CHARSET     reduce using rule 52 (space-delimiter -> blockcomment .)
    SYM_IMPORT      reduce using rule 52 (space-delimiter -> blockcomment .)
    ELEMENT         reduce using rule 52 (space-delimiter -> blockcomment .)
    KEY_ONLY        reduce using rule 52 (space-delimiter -> blockcomment .)
    KEY_NOT         reduce using rule 52 (space-delimiter -> blockcomment .)


state 5

    (85) htmlcomment -> CDC .
